--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,6 @@
 @import './common';
-@import './example';
+@import './form';
+@import './button';
+@import './radio-button';
+@import './gallery';
+@import './hidden';
