--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -7,7 +7,7 @@
       autocomplete="off"
       placeholder="Search images..."
     />
-    <div class="radio-wrap">
+    <!-- <div class="radio-wrap">
       <p>Infinite scroll</p>
       <label class="switch">
         <input
@@ -29,7 +29,7 @@
         <span class="slider"></span>
       </label>
       <p>Load More Button</p>
-    </div>
+    </div> -->
 
     <button class="button search__button" type="submit">Search</button>
   </form>
